changed color of communism

--- a/css/styles.css
+++ b/css/styles.css
@@ -169,7 +169,7 @@ a:visited {
 }
 
 .bottom2-box {
-  background-color: #ff4a3d;
+  background-color: #fcfcfc;
   width: 180px;
   height: 180px;
   padding: 20px;
